Fix overflow issue when scrolling blockly dropdowns

--- a/theme/blockly-core.less
+++ b/theme/blockly-core.less
@@ -169,6 +169,7 @@ div.blocklyWidgetDiv.functioneditor {
 
 div.blocklyDropDownDiv {
     z-index: @blocklyDropdownDivZIndex;
+    overflow: hidden;
 }
 
 div.blocklyTooltipDiv {
